# caissaflow

./: .gitignore  CMakeLists.txt
src/: attacks.cpp  attacks.h  bitboard.cpp  bitboard.h  board.cpp  board.h  magic_generator.cpp  types.h
tests/attacks/: bishop_attacks.cpp  king_attacks.cpp  knight_attacks.cpp  pawn_attacks.cpp  rook_attacks.cpp
